--- a/src/app/components/product-category-menu/product-category-menu.component.html
+++ b/src/app/components/product-category-menu/product-category-menu.component.html
@@ -1,46 +1,63 @@
 
 <div>
   <ion-list-header>
-    Options
+   <ion-label> View</ion-label>
   </ion-list-header>
   <ion-menu-toggle [autoHide]="false" class="text-1x">
     <ion-row class="menu-layout">
       <ion-col>
         <div class="col-inner">
           <ion-list>
-            <ion-item lines="none" routerLink="/createProgram" routerLinkActive="active-link" button>
-              <ion-icon slot="start" name="help-circle-outline" size="small"></ion-icon>
 
+            <ion-item lines="none" routerLink="/userPrograms" routerLinkActive="active-link" button>
+              <ion-icon slot="start" name="folder" size="small"></ion-icon>
+              <ion-label>
+               My Programs
+              </ion-label>
+            </ion-item>
+          </ion-list>
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-menu-toggle>
+  <ion-list-header>
+    Create
+  </ion-list-header>
+
+  
+  <ion-menu-toggle [autoHide]="false" class="text-1x">
+    <ion-row class="menu-layout">
+      <ion-col>
+        <div class="col-inner">
+          <ion-list>
+            <ion-item lines="none" routerLink="/createProgram" routerLinkActive="active-link" button>
+              <ion-icon  slot="start" size="small" name="book"></ion-icon>
               <ion-label>
                 Create Program
               </ion-label>
             </ion-item>
-            <ion-item lines="none" routerLink="/userPrograms" routerLinkActive="active-link" button>
-              <ion-icon slot="start" name="help-circle-outline" size="small"></ion-icon>
-
-              <ion-label>
-                User Program
-              </ion-label>
-            </ion-item>
             <ion-item lines="none" routerLink="/assignProgramToUser" routerLinkActive="active-link" button>
-              <ion-icon slot="start" name="help-circle-outline" size="small"></ion-icon>
-
+              <ion-icon slot="start" name="add" size="small"></ion-icon>
               <ion-label>
                 Assign Program To User
               </ion-label>
             </ion-item>
             <ion-item lines="none" routerLink="/createWorkout" routerLinkActive="active-link" button>
-              <ion-icon slot="start" name="help-circle-outline" size="small"></ion-icon>
-
+              <ion-icon slot="start" name="barbell" size="small"></ion-icon>
               <ion-label>
                 Create Workout
               </ion-label>
             </ion-item>
             <ion-item lines="none" routerLink="/createDiet" routerLinkActive="active-link" button>
-              <ion-icon slot="start" name="help-circle-outline" size="small"></ion-icon>
-
+              <ion-icon slot="start" name="beer" size="small"></ion-icon>
               <ion-label>
                 Create Diet
+              </ion-label>
+            </ion-item>
+            <ion-item lines="none" routerLink="/addExcersize" routerLinkActive="active-link" button>
+              <ion-icon slot="start" name="bicycle" size="small"></ion-icon>
+              <ion-label>
+                Create Excersize
               </ion-label>
             </ion-item>
           </ion-list>
@@ -61,7 +78,9 @@
         <ion-list>
           <ion-item *ngFor="let tempProductCategory of productCategories" lines="none"
             routerLink="/category/{{ tempProductCategory.id }}" routerLinkActive="active-link" button>
-            <ion-icon slot="start" name="help-circle-outline" size="small"></ion-icon>
+            <ion-avatar slot="start">
+              <ion-img [src]='tempProductCategory.iconName'></ion-img> 
+            </ion-avatar>
             <ion-label>
               {{tempProductCategory.categoryName}}
             </ion-label>
@@ -71,3 +90,4 @@
     </ion-col>
   </ion-row>
 </ion-menu-toggle>
+
