--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header #header>
   <!-- <ion-toolbar>
     <ion-searchbar (ionChange)="setFilteredItems($event)"></ion-searchbar>
    
@@ -6,7 +6,7 @@
   <!-- <ion-toolbar color='primary'>
     <ion-title>Products</ion-title>
   </ion-toolbar> -->
-  <ion-toolbar color='secondry'>
+  <ion-toolbar color='primary'>
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/recipes"></ion-back-button>
     </ion-buttons>
@@ -19,7 +19,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content scrollEvents="true" [fullscreen]="true" [appHideHeader]="header">
 <!-- <p>Recipes Work!</p> -->
 <ion-list>
   <ion-item *ngFor='let tempProduct of products' [routerLink]="['/products',tempProduct.id]">
